[gd_scene load_steps=4 format=2]

[ext_resource path="res://card_back.png" type="Texture" id=1]
[ext_resource path="res://Card.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 30 )

[node name="Card" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Card_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Card_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
