[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/card_sprites/base4.png" type="Texture" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/mukta16.tres" type="DynamicFont" id=3]
[ext_resource path="res://prefabs/Icon.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/faces_v2/men/man14.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54, 88 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 52 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.713726, 0.145098, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
anti_aliasing = false

[node name="Card" type="Area2D"]
position = Vector2( -0.147682, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Full" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Face" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, -48 )

[node name="LabelContainer" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="LabelContainer"]
margin_left = -31.0
margin_top = -14.0
margin_right = 31.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "test"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Icons" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Icon1" parent="Icons" instance=ExtResource( 4 )]
position = Vector2( -16.1311, 30 )
animation = "9"

[node name="Icon3" parent="Icons" instance=ExtResource( 4 )]
position = Vector2( -16, 62 )
animation = "9"

[node name="Icon2" parent="Icons" instance=ExtResource( 4 )]
position = Vector2( 16, 30 )
animation = "9"

[node name="Icon4" parent="Icons" instance=ExtResource( 4 )]
position = Vector2( 16, 62 )
animation = "9"

[node name="Interjambs" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="BoundaryLeft" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="CollisionShape2D" parent="BoundaryLeft"]
position = Vector2( -47, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lower" type="CollisionShape2D" parent="BoundaryLeft"]
position = Vector2( -61, 45 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Upper" type="CollisionShape2D" parent="BoundaryLeft"]
position = Vector2( -61, -45 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="BoundaryRight" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="CollisionShape2D" parent="BoundaryRight"]
position = Vector2( 47, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lower" type="CollisionShape2D" parent="BoundaryRight"]
position = Vector2( 61, 45 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Lower2" type="CollisionShape2D" parent="BoundaryRight"]
position = Vector2( 61, 45 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Upper" type="CollisionShape2D" parent="BoundaryRight"]
position = Vector2( 61, -45 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -47.0
margin_top = 2.0
margin_right = 141.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Card_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Card_area_exited"]
[connection signal="area_entered" from="BoundaryLeft" to="." method="_on_Boundary_area_entered"]
[connection signal="area_exited" from="BoundaryLeft" to="." method="_on_Boundary_area_exited"]
